--- a/fr/athens.html
+++ b/fr/athens.html
@@ -118,7 +118,7 @@
 
   <!-- Intro -->
   <section class="intro" aria-hidden="false">
-      <h1 class="intro-title">Palimpseste - Athens</h1>
+      <h1 class="intro-title">Palimpseste - Athènes</h1>
   </section>
 
   <!-- Header -->
@@ -128,7 +128,7 @@
     <nav class="primary" role="navigation" aria-label="Navigation principale">
       <a href="index.html">Accueil</a>
       <a href="directory.html">Artistes</a>
-      <a href="#">Athens</a>
+      <a href="#">Athènes</a>
       <a href="#">Contact</a>
     </nav>
 
