--- a/fr/index.html
+++ b/fr/index.html
@@ -594,22 +594,22 @@ Photographies, récits, sons, graffitis, collages et visions poétiques viennent
     .tile[data-index="3"] .mini-titlee{ left:12px }
 
     /* afficher mini-titlee uniquement lorsque la tuile est non-active */
-    .tiles [aria-selected="false"] .mini-titlee{ color: white; font-size: 22px; font-weight: bold; font-family: 'Playfair'; opacity:1; transform:translateY(-50%) translateX(0) }
+    .tiles [aria-selected="false"] .mini-titlee{ color: white; font-size: 24px; font-weight: bold; font-family: 'Playfair'; opacity:1; transform:translateY(-50%) translateX(0) }
     .tiles [data-active-tile] .mini-titlee{ opacity:0; transform:translateY(-50%) translateX(6px) }
 
     /* Overlayy centered white box: hidden by default, displayed via .overlayy--visible (JS) */
     .overlayy{ position:absolute; left:50%; top:50%; transform: translate(-50%,-50%) translateY(8px); width:min(520px,78%); max-width:88%; background:#ffffff; padding:22px 26px; border-radius:10px; box-shadow:0 12px 30px rgba(2,6,23,0.45); text-align:center; opacity:0; transition: opacity 360ms ease, transform 420ms ease; z-index:6; pointer-events:auto }
     .overlayy--visible{ opacity:1; transform: translate(-50%,-50%) translateY(0) }
 
-    .titlee{ font-size:clamp(16px,2vw,22px); font-weight:700; margin:0 0 8px; letter-spacing:0.1px }
-    .desc{ font-size:clamp(13px,1.1vw,15px); margin:0; opacity:0.9 }
+    .titlee{ font-size:clamp(22px,2vw,24px); font-weight:700; margin:0 0 8px; letter-spacing:0.1px }
+    .desc{ font-size:0.9rem;margin:0; opacity:0.9 }
 
 
     /* Responsive/mobile: stacked, no animations; mini-titlees hidden; overlayys centered and full-width; remove margins between tiles */
     @media (max-width:700px){
       :root{ --section-height:auto; --peek:0 }
       .tiles{ display:block; height:auto; transition:none !important }
-      .tile{ display:block; height:auto; min-height:220px; margin:0; border-radius:0; overflow:hidden; transition:none !important; transform:none !important; align-items:center; justify-content:center; position:relative }
+      .tile{ display:block; height:auto; min-height:320px; margin:0; border-radius:0; overflow:hidden; transition:none !important; transform:none !important; align-items:center; justify-content:center; position:relative }
       .mini-titlee{ display:none }
       .tile::after{ display:none !important }
       /* En mobile, overlayy visible immédiatement (maintien du comportement précédent) */
