--- a/fr/index.html
+++ b/fr/index.html
@@ -365,6 +365,11 @@
       :root{--max-font:20px}
       .concorde-section{background-size:48px 48px}
       .concorde-overlay{padding:28px}
+    
+       /* On cache le SVG dynamique sur mobile */
+  .letters-svg {
+    display:none;
+  }
     }
 
   </style>
