--- a/gk/index.html
+++ b/gk/index.html
@@ -157,7 +157,7 @@
 
   <!-- Intro -->
   <section class="intro" aria-hidden="false">
-      <h1 class="intro-title">Palimpseste</h1>
+      <h1 class="intro-title">Παλίμψηστο</h1>
   </section>
 
   <!-- Header -->
@@ -165,10 +165,10 @@
 
     <!-- Desktop nav -->
     <nav class="primary" role="navigation" aria-label="Navigation principale">
-      <a href="#">Accueil</a>
-      <a href="directory.html">Artistes</a>
-      <a href="athens.html">Athènes</a>
-      <a href="#">Contact</a>
+      <a href="#">Αρχική</a>
+      <a href="directory.html">Καλλιτέχνες</a>
+      <a href="athens.html">Αθήνα</a>
+      <a href="#">Επικοινωνία</a>
     </nav>
 
     <!-- Mobile controls: hamburger -->
@@ -183,10 +183,10 @@
     <!-- Mobile nav panel (duplicate links for mobile) -->
     <div id="mobileNav" class="mobile-nav" aria-hidden="true">
       <div class="mobile-links" role="menu" aria-label="Menu principal">
-        <a href="#" role="menuitem">Accueil</a>
-        <a href="directory.html" role="menuitem">Artistes</a>
-        <a href="athens.html" role="menuitem">Athènes</a>
-        <a href="#" role="menuitem">Contact</a>
+        <a href="#" role="menuitem">Αρχική</a>
+        <a href="directory.html" role="menuitem">Καλλιτέχνες</a>
+        <a href="athens.html" role="menuitem">Αθήνα</a>
+        <a href="#" role="menuitem">Επικοινωνία</a>
       </div>
     </div>
   </header>
@@ -274,9 +274,9 @@
     <div class="cta-content">
 
       <article class="relative p-4 rounded-lg shadow shadow-lg article">
-        <h3 class="font-semibold text-2xl">Athènes / Αθήνα</h3>
+        <h3 class="font-semibold text-2xl">Αθήνα</h3>
 
-        <p class="mt-2 pr-12"><em>Palimpseste</em> est un projet artistique collaboratif pensé pour voyager de ville en ville, révélant à chaque fois les mémoires, tensions et imaginaires propres aux métropoles. Ville antique et contemporaine, fragmentée et foisonnante, Athènes devient le premier palimpseste de cette archive partagée.
+        <p class="mt-2 pr-12">Το Palimpseste είναι ένα συνεργατικό καλλιτεχνικό έργο που έχει σχεδιαστεί για να ταξιδεύει από πόλη σε πόλη, αποκαλύπτοντας κάθε φορά τις μνήμες, τις εντάσεις και τις φαντασιώσεις που χαρακτηρίζουν τις μητροπόλεις. Αρχαία και σύγχρονη, κατακερματισμένη και πλούσια, η Αθήνα γίνεται το πρώτο παλίμψηστο αυτού του κοινού αρχείου.
         </p>
         <style>
           .button {
@@ -417,7 +417,7 @@
   <div class="concorde-overlay" role="region" aria-label="Texte d'accroche">
     <div class="backdrop" aria-hidden="true"></div>
     <div class="content">
-      <h2 class="title">Chaque ville est un manuscrit sans fin, écrit, effacé et réinscrit par celles et ceux qui l’habitent.</h2>
+      <h2 class="title">Κάθε πόλη είναι ένα ατέλειωτο χειρόγραφο, γραμμένο, σβησμένο και ξαναγραμμένο από όσους την κατοικούν.</h2>
       <p>Palimpseste Urbain est un projet artistique collaboratif qui relie habitants, artistes et voyageurs autour d’une archive vivante des métropoles.<br>
 Mémoire, présent et futur s’y superposent comme des strates d’un même récit.<br>
 Photographies, récits, sons, graffitis, collages et visions poétiques viennent tisser une cartographie sensible, collective et évolutive.</p>
