--- a/fr/directory.html
+++ b/fr/directory.html
@@ -19,7 +19,8 @@
       --radius:12px; font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
     *{box-sizing:border-box}
-    html,body{margin-top: 50px}
+    html,body{margin-top: 50px;}
+
 
     .container{max-width:900px; width: 90%; margin:0 auto; margin-bottom: 4rem;}
     .annuaire-header{display:flex;gap:18px;align-items:center;margin-bottom:20px}
@@ -97,7 +98,7 @@
 
   <script src="../js/sub.js"></script>
 
-
+  <main>
 
 
   <div class="container">
@@ -210,6 +211,7 @@
       }
     });
   </script>
+</main>
 
 
   <footer>
